force-app/main/default/objects/KimbleAgent__Log__c/KimbleAgent__Log__c.object-meta.xml
<CustomObject>
    <label>Kimble Sense Log</label>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kimble Sense Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>