force-app/main/default/objects/KimbleAgent__Log__c/fields/KimbleAgent__Body__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__Body__c</fullName>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>