force-app/main/default/objects/KimbleAgent__Log__c/fields/KimbleAgent__Message__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>