force-app/main/default/objects/KimbleAgent__Log__c/fields/KimbleAgent__Problem__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__Problem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Problem</label>
    <referenceTo>KimbleAgent__Problem__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>