force-app/main/default/objects/KimbleAgent__Log__c/fields/KimbleAgent__SentDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__SentDate__c</fullName>
    <label>Sent Date</label>
    <type>DateTime</type>
</CustomField>