force-app/main/default/objects/KimbleAgent__Log__c/fields/KimbleAgent__Status__c.field-meta.xml
<CustomField>
    <fullName>KimbleAgent__Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Status</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleAgent__ReferenceData__c.KimbleAgent__Domain__c</field>
            <operation>equals</operation>
            <value>LogStatus</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleAgent__ReferenceData__c</referenceTo>
    <relationshipLabel>Logs (Status)</relationshipLabel>
    <relationshipName>LogsStatus</relationshipName>
    <type>Lookup</type>
</CustomField>