force-app/main/default/objects/KimbleAgent__Log__c/listViews/KimbleAgent__Today.listView-meta.xml
<ListView>
    <fullName>KimbleAgent__Today</fullName>
    <columns>NAME</columns>
    <columns>KimbleAgent__Status__c</columns>
    <columns>KimbleAgent__Measure__c</columns>
    <columns>KimbleAgent__Body__c</columns>
    <columns>KimbleAgent__Message__c</columns>
    <columns>KimbleAgent__SentDate__c</columns>
    <columns>KimbleAgent__RetryCount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
    <language>en_US</language>
</ListView>